[gd_scene load_steps=6 format=3 uid="uid://c4p6sq8o3f2h5"]

[ext_resource type="Script" path="res://UI/radial_menu.gd" id="1_31xik"]
[ext_resource type="PackedScene" uid="uid://dxt6u2amn8l16" path="res://UI/ui_trap_box.tscn" id="2_jkcbw"]
[ext_resource type="Texture2D" uid="uid://dn3l2yq8cukl8" path="res://Textures/Player/Traps/LandmineIcon.png" id="3_aipkl"]
[ext_resource type="Texture2D" uid="uid://p3nmqli2qro4" path="res://Textures/Player/Traps/LaserIcon.png" id="3_opwe3"]
[ext_resource type="Texture2D" uid="uid://br88b0qpk27ja" path="res://Textures/Player/Traps/KnockbackIcon.png" id="4_wy3jx"]

[node name="RadialMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_31xik")

[node name="TopBox" parent="." instance=ExtResource("2_jkcbw")]
layout_mode = 0
offset_left = -16.0
offset_top = -56.0
offset_right = 16.0
offset_bottom = -24.0
texture = ExtResource("3_opwe3")

[node name="RightBox" parent="." instance=ExtResource("2_jkcbw")]
layout_mode = 0
offset_left = 24.0
offset_top = -16.0
offset_right = 56.0
offset_bottom = 16.0
texture = ExtResource("4_wy3jx")

[node name="BottomBox" parent="." instance=ExtResource("2_jkcbw")]
layout_mode = 0
offset_left = -16.0
offset_top = 24.0
offset_right = 16.0
offset_bottom = 56.0

[node name="LeftBox" parent="." instance=ExtResource("2_jkcbw")]
layout_mode = 0
offset_left = -56.0
offset_top = -16.0
offset_right = -24.0
offset_bottom = 16.0
texture = ExtResource("3_aipkl")
